--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,20 @@
 {
-	"name": "@jwrunge/manifold",
-	"version": "0.4.18",
-	"tsconfig": "tsconfig.json",
-	"description": "A lightweight, no-build reactive state and templating library for the modern web",
-	"license": "MIT",
-	"exports": "./src/main.ts",
-	"tasks": {
-		"test": "deno test --allow-env --allow-read tests/",
-		"build": "deno run --allow-read --allow-write build.ts"
-	},
-	"imports": {
-		"@std/assert": "jsr:@std/assert@^1.0.0"
-	},
-	"exclude": ["node_modules/", "dist/", ".github/"]
+  "name": "@jwrunge/manifold",
+  "version": "0.4.23",
+  "tsconfig": "tsconfig.json",
+  "description": "A lightweight, no-build reactive state and templating library for the modern web",
+  "license": "MIT",
+  "exports": "./src/main.ts",
+  "tasks": {
+    "test": "deno test --allow-env --allow-read tests/",
+    "build": "deno run --allow-read --allow-write build.ts"
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.0"
+  },
+  "exclude": [
+    "node_modules/",
+    "dist/",
+    ".github/"
+  ]
 }
