--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,17 +118,17 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             # Publish to JSR (using OIDC - no token needed!)
-            # - name: Publish to JSR
-            # if: steps.version_check.outputs.should_publish_npm == 'true'
-            # run: |
-            #     echo "Publishing version ${{ steps.version_check.outputs.version }} to JSR"
-            #     # Update both JSR and Deno config versions to match package.json via Deno script
-            #     deno run --allow-read --allow-write scripts/update-release-config.ts
-            #     # Debug: show what will be published so we can verify DOM types are present
-            #     echo '--- debug: jsr.json ---'
-            #     cat jsr.json || true
-            #     # Use deno publish directly which properly supports --allow-dirty
-            #     jsr publish --allow-dirty || echo "JSR publish failed"
+            - name: Publish to JSR
+              if: steps.version_check.outputs.should_publish_npm == 'true'
+              run: |
+                  echo "Publishing version ${{ steps.version_check.outputs.version }} to JSR"
+                  # Update both JSR and Deno config versions to match package.json via Deno script
+                  deno run --allow-read --allow-write scripts/update-release-config.ts
+                  # Debug: show what will be published so we can verify DOM types are present
+                  echo '--- debug: jsr.json ---'
+                  cat jsr.json || true
+                  # Use deno publish directly which properly supports --allow-dirty
+                  jsr publish --allow-dirty || echo "JSR publish failed"
 
             # Setup Deno Land publishing (via GitHub release)
             - name: Create GitHub Release for Deno Land
