--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,9 @@
 	"name": "@jwrunge/manifold",
 	"version": "0.4.23",
 	"tsconfig": "tsconfig.json",
+	"compilerOptions": {
+		"lib": ["es2022", "dom", "dom.iterable"]
+	},
 	"description": "A lightweight, no-build reactive state and templating library for the modern web",
 	"license": "MIT",
 	"exports": "./src/main.ts",
