--- a/deno.json
+++ b/deno.json
@@ -9,8 +9,8 @@
 	"license": "MIT",
 	"exports": "./src/main.ts",
 	"tasks": {
-		"test": "deno test --allow-env --allow-read tests/",
-		"build": "deno run --allow-read --allow-write build.ts"
+		"test": "deno test --quiet --allow-env --allow-read tests/",
+		"build": "deno run --quiet --allow-read --allow-write build.ts"
 	},
 	"imports": {
 		"@std/assert": "jsr:@std/assert@^1.0.0"
