--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@jwrunge/manifold",
 	"private": false,
-	"version": "0.4.39",
+	"version": "0.5.0",
 	"type": "module",
 	"sideEffects": false,
 	"main": "./dist/manifold.cjs",
@@ -26,7 +26,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"description": "A small, fast reactive templating and state-management library for the DOM with server-friendly helpers.",
+	"description": "A small, fast reactive templating and state-management library for the modern web.",
 	"keywords": [
 		"reactive",
 		"templating",
