--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"version": "0.5.0",
 	"type": "module",
 	"sideEffects": false,
-	"main": "./dist/manifold.cjs",
-	"module": "./dist/manifold.es.js",
+	"main": "./dist/manifold.js",
+	"module": "./dist/manifold.js",
 	"types": "./dist/manifold.d.ts",
 	"unpkg": "./dist/manifold.umd.js",
 	"jsdelivr": "./dist/manifold.umd.js",
-	"browser": "./dist/manifold.es.js",
+	"browser": "./dist/manifold.js",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/jwrunge/manifold.git"
@@ -42,9 +42,8 @@
 	"exports": {
 		".": {
 			"types": "./dist/manifold.d.ts",
-			"import": "./dist/manifold.es.js",
-			"require": "./dist/manifold.cjs",
-			"default": "./dist/manifold.es.js"
+			"import": "./dist/manifold.js",
+			"default": "./dist/manifold.js"
 		},
 		"./umd": {
 			"default": "./dist/manifold.umd.js"
