--- a/deno.json
+++ b/deno.json
@@ -15,5 +15,5 @@
 	"imports": {
 		"@std/assert": "jsr:@std/assert@^1.0.0"
 	},
-	"exclude": ["node_modules/", "dist/", ".github/"]
+	"exclude": ["node_modules/", "dist/", ".github/", "src/"]
 }
